# gstreamer-examples

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.devcontainer/: devcontainer.json
conda/: README.md  caffe.yml  gst-pytorch-gpu-python3.10.yml  gst-pytorch-gpu-python3.8.yml  gst-pytorch-gpu.yml  gst_pytorch_gpu.yml  mcp.yml
deepstream-examples/: CMakeLists.txt  README.md
deepstream-examples/cmake/: FindDeepstream.cmake  FindTensorRT.cmake
deepstream-examples/deepstream-hybrid/: README.md  docker-compose.yml
deepstream-examples/deepstream-hybrid/figures/: hybrid_pipeline.drawio
deepstream-examples/deepstream-retinaface/: README.md  config_classifier.txt  config_detector.txt  config_detector_dummy_parser.txt  config_feature_extractor.txt  config_retinaface.txt  labels.txt  retinaface.py  tracker_config.txt
deepstream-examples/deepstream-tracking/: README.md  config_tracker_NvDCF_perf.yml  config_tracker_NvDCF_perf_uniqueid.yml  dstest2_sgie3_config.txt  dstest2_tracker_config.txt  gst-tracking-v2.py  gst-tracking.py  tracker_config.yml
deepstream-examples/deepstream-tracking-parallel/: README.md  gst-tracking-parallel.py  pgie_config_1.txt  pgie_config_2.txt  sgie1_config_1.txt  sgie1_config_2.txt  sgie2_config_1.txt  sgie2_config_2.txt  sgie3_config_1.txt  sgie3_config_2.txt  tracker_config_1.txt  tracker_config_2.txt
deepstream-examples/deepstream-tracking-parallel/figures/: multi_input_pipeline.drawio
deepstream-examples/deepstream-triton-tracking/: README.md  docker-compose.yml  dstest2_tracker_config.txt  gst-triton-parallel-tracking-v1.py  gst-triton-parallel-tracking-v2.py  gst-triton-tracking-v2.py  gst-triton-tracking.py
deepstream-examples/src/: README.md
deepstream-examples/src/apps/deepstream_retinaface/: CMakeLists.txt  main.cpp
deepstream-examples/src/gst-plugins/: CMakeLists.txt  README.md
deepstream-examples/src/gst-plugins/deepstream6.0/gst-nvinfer-rect/: CMakeLists.txt  gstnvinfer.cpp  gstnvinfer_meta_utils.cpp
deepstream-examples/src/gst-plugins/deepstream6.1/gst-nvinfer-rect/: CMakeLists.txt  gstnvinfer.cpp
deepstream-examples/src/gst-plugins/deepstream6.2/gst-nvinfer-rect/: CMakeLists.txt  gstnvinfer.h  gstnvinfer_property_parser.h
deepstream-examples/src/gst-plugins/deepstream6.3/: CMakeLists.txt
deepstream-examples/src/gst-plugins/deepstream6.3/gst-nvinfer-rect/: gstnvinfer.h
deepstream-examples/src/gst-plugins/deepstream7.0/gst-nvinfer-rect/: Makefile  gstnvinfer.cpp  gstnvinfer.h  gstnvinfer_allocator.cpp  gstnvinfer_allocator.h  gstnvinfer_impl.cpp  gstnvinfer_impl.h  gstnvinfer_meta_utils.cpp  gstnvinfer_meta_utils.h  gstnvinfer_property_parser.cpp  gstnvinfer_property_parser.h  gstnvinfer_yaml_parser.cpp  gstnvinfer_yaml_parser.h
deepstream-examples/src/gst-plugins/gst-nvinfer-rect/: CMakeLists.txt  Makefile  gstnvinfer.cpp
deepstream-examples/src/gst-plugins/retinaface_postprocessor/: CMakeLists.txt  config.h  gstretinafacepostprocessor.cpp  gstretinafacepostprocessor.hpp
deepstream-examples/src/nvds_parsers/: CMakeLists.txt  nvdsparser_dummy.cpp  nvdsparser_retinaface.cpp
deepstream-examples/src/nvds_tools/: CMakeLists.txt  metadata_tools.cpp  metadata_tools.hpp  nvbufsurf_tools.hpp
deepstream-examples/src/retinaface_parser/: CMakeLists.txt  nvdsparse_retinaface.cpp
deepstream-examples/src/tools/: CMakeLists.txt  data_types.cpp  data_types.hpp  nms.cpp  nms.hpp
deepstream-examples/src/utils/: CMakeLists.txt  nvbufsurf_tools.cpp  nvbufsurf_tools.hpp
docker/: Dockerfile-deepstream  Dockerfile-deepstream-6.0.1-devel  Dockerfile-deepstream-6.1.1-devel  Dockerfile-deepstream-6.3-devel  Dockerfile-deepstream-6.3-triton-devel  Dockerfile-deepstream-8.0  Dockerfile-gstreamer-1.28  Dockerfile-gstreamer-1.28-cuda  Dockerfile-rtsp-server  README.md  docker-compose.yml  gstreamer_mcp.py  gstreamer_mcp_server.py
gst-examples/: AGENTS.md  README.md  gst-bytetrack.py  gst-pytorch-example-1.1.py  gst-pytorch-example-1.py  gst-qtdemux-h264-avdec_aac.py  gst-qtdemux-h264.py  gst-rtsp-server.py  gst-yolox-bytetrack-cpudec.py  gst-yolox-bytetrack-gpudec.py  gst-yolox-bytetrack.py  test_context_isolation.py
gst-examples/rtsp-server/: Dockerfile  README.md  docker-compose.yml  rtsp-server.py
hailo-examples/: README.md
hailo-examples/tracking/: README.md
helper-package/: LICENSE.txt  README.md  pyproject.toml  setup.py
helper-package/src/: test_caffe_model.py
helper-package/src/helpers/: __init__.py  gsthelpers.py
