[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpers"
version = "0.0.1"
authors = [
  { name="Jarno Ralli", email="jarno@ralli.fi" },
]
description = "Set of tools to make creation of gst pipelines easier"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
